--- a/ASP_Event_Project/appsettings.json
+++ b/ASP_Event_Project/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "AppIdentity":  "Server=.;Database=EventsDb;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DefaultConnection": "Server=.;Database=EventsDb;Trusted_Connection=True"
   }
 }
